# master-programming-task

lab3/: CMakeLists.txt
lab3/include/: proxy.hpp
lab3/tests/: proxy.cpp
lab4/: CMakeLists.txt
lab4/include/: iterator.hpp
lab5/: CMakeLists.txt
lab5/include/: variant.hpp
lab5/tests/: variant.cpp
lab6/: CMakeLists.txt
lab6/include/: json.hpp
lab6/tests/: json.cpp  parser.hpp  quoted_string.cpp
lab7/: CMakeLists.txt
lab7/include/: type_map.hpp
lab8/: CMakeLists.txt
lab8/include/: strided_range.hpp
lab8/tests/: strided_range.cpp
